methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:19: error: Invalid literal number
    xx = arr(2i);
             ^PictureMono1:20: error: Invalid literal number
    yy = arr(2i+1);
             ^PictureMono1:19: error: illegal start of simple expression
    xx = arr(2i);
             ^PictureMono1:23: error: ')' expected but '}' found.
  }
  ^