methods.picture.PictureMono1.scala.code
override def run() = {
  makeX(0,3)
  makeX(6,3)
  makeX(3,6)
  makeX(3,0)
}

def pushpt(x:Int, y:Int) = { 
  setPos(x,y);
	brushDown();
  brushUp();
}

def makeX(x:Int,y:Int) = {
  var arr = Array( x-1,j, x+1,j, x,j-1, x,j+1 );

  
  for (i <- 0 to 3) {
    xx = arr(2i);
    yy = arr(2i+1);
    if (xx*yy != 0 && xx < 7 and yy <7)
    	pushpt(xx,yy);
  }
}
  
  